syntax = "proto2";

package proto;

option java_package = "fi.hsl.common.transitdata.proto";
option java_outer_classname = "MetroAtsProtos";

enum MetroTrainType {
    M = 0;
    T = 1;
}

enum MetroProgress {
    SCHEDULED = 0;
    INPROGRESS = 1;
    COMPLETED = 2;
    CANCELLED = 3;
}

message MetroStopEstimate {
    // Fields from mqtt-pulsar-gateway
    required string station = 1;
    required string platform = 2;
    required string arrival_time_planned = 3;
    optional string arrival_time_forecast = 4;
    optional string arrival_time_measured = 5;
    required string departure_time_planned = 6;
    optional string departure_time_forecast = 7;
    optional string departure_time_measured = 8;
    required string source = 9;
    required string stop_number = 10;
    optional MetroProgress row_progress = 11;
}

message MetroEstimate {
    // Fields from mqtt-pulsar-gateway
    required int32 SchemaVersion = 1 [default = 1];
    repeated MetroStopEstimate metro_rows = 2;
    required MetroTrainType train_type = 3;
    required MetroProgress journey_sectionprogress = 4;
    required string begin_time = 5;
    required string end_time = 6;
    required string start_stop_short_name = 7;
    // Fields from redis
    optional string operating_day = 8;
    optional string start_stop_number = 9;
    optional string start_time = 10;
    optional string dvj_id = 11;
    optional string route_name = 12;
    optional string start_datetime = 13;
    optional string direction = 14;
    optional bool scheduled = 15;
}
